Author name edited

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,4 +1,4 @@
 [package]
 name = "rosalind"
 version = "0.0.1"
-authors = ["antklim <antklim@gmail.com>"]
+authors = ["Anton Klimenko <antklim@gmail.com>"]
