--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,3 +2,8 @@
 name = "rosalind"
 version = "0.0.1"
 authors = ["Anton Klimenko <antklim@gmail.com>"]
+description = "Crate contains solutions of problems published on Rosalind.info"
+repository = "https://github.com/antklim/rosalind.git"
+readme = "README.md"
+keywords = ["rosalind", "algorithms", "bioinformatics"]
+license = "MIT"
