--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
 name = "rosalind"
-version = "0.5.0"
+version = "0.5.1"
 authors = ["Anton Klimenko <antklim@gmail.com>"]
 description = "Crate contains solutions of problems published on Rosalind.info"
 repository = "https://github.com/antklim/rosalind.git"
+documentation = "https://antklim.github.io/docs/rosalind/rosalind/index.html"
 readme = "README.md"
 keywords = ["rosalind", "algorithms", "bioinformatics"]
 license = "MIT"
